Serious refactoring, not sure if it was any good. But preserving for posterity

--- a/SociologySimulator.csproj
+++ b/SociologySimulator.csproj
@@ -12,4 +12,13 @@
 		</Content>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Remove="Resources\NeedCategories.txt" />
+	  <None Remove="Resources\Needs.txt" />
+	  <None Remove="Resources\TraitCategories.txt" />
+	  <None Remove="Resources\Traits.txt" />
+	  <None Remove="Resources\ValueCategories.txt" />
+	  <None Remove="Resources\Values.txt" />
+	</ItemGroup>
+
 </Project>
