--- a/SociologySimulator.csproj
+++ b/SociologySimulator.csproj
@@ -21,4 +21,12 @@
 	  <None Remove="Resources\Values.txt" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.2">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.2" />
+	</ItemGroup>
+
 </Project>
